# axonex-posemesh-fleet

./: README.md  cactus_client.py  config.example.yaml  fleet_controller.py  hagall_client.py  main.py  posemesh_connector.py  yunji_client.py
docs/: presentation.md  use_cases.md
ros2/: package.json  package.xml  posemesh_sensor_node.py  setup.py  yunji_ros_node.py
ros2/launch/: yunji_posemesh.launch.py
