<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yunji_ros_driver</name>
  <version>0.1.0</version>
  <description>ROS2 driver for Yunji robots with PoseMesh integration</description>
  <maintainer email="alan@example.com">bibtv</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>python_cmake</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
